fix wrap in Custom page

--- a/src/stylesheets/custom_page.scss
+++ b/src/stylesheets/custom_page.scss
@@ -64,6 +64,7 @@
             line-height: 28px;
             display: flex;
             align-items: end;
+            white-space: nowrap;
 
             &::before {
               content: "";
@@ -181,6 +182,10 @@
 
       .column:nth-of-type(2) {
         margin-left: 80px;
+      }
+
+      .colWrapper .column ul li{
+        white-space: normal;
       }
     }
   }
